[package]
name = "rust-tc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { git = "https://github.com/vihu/bls12_381", branch = "rg/millerloopresult-helpers", features = ["groups", "pairings", "alloc"] }
zeroize = "1.4.1"
rand = "0.8.4"
ff = "0.10.0"
tiny-keccak = { version = "2.0", features = ["sha3"] }
group = "0.10.0"
rand_chacha = "0.3.1"
subtle = "2.4.1"
anyhow = "1.0.42"
bincode = "1.3.3"
serde = { version = "1.0.127", features = ["derive"] }
rand_core = "0.6.3"

[dev-dependencies]
criterion = "0.3.5"
rand_xorshift = "0.3.0"

[[bench]]
name = "bench"
harness = false

[profile.release]
debug = true
